# PatentAgent

./: .env copy  .gitignore  config.py  llm_client.py  main.py  main_old.py  prompts.py  prompts_old.py  pyproject.toml  ui_components.py  workflows.py  workflows_old.py
logs/artifacts/run_20251113_171946/: 0001_title:title_options_prompt.txt  0001_title:title_options_response.txt  0002_background:background_problem_prompt.txt  0002_background:background_problem_response.txt  0003_background:background_context_prompt.txt  0003_background:background_context_response.txt  0004_invention:invention_purpose_prompt.txt  0004_invention:invention_purpose_response.txt  0005_invention:solution_points_prompt.txt  0005_invention:solution_points_response.txt  0006_invention:invention_solution_detail_prompt.txt  0006_invention:invention_solution_detail_response.txt  0007_invention:invention_effects_prompt.txt  0007_invention:invention_effects_response.txt  0008_implementation_detail_1_prompt.txt  0008_implementation_detail_1_response.txt
logs/artifacts/run_20251113_173920/: 0001_analyze_brief_prompt.txt  0001_analyze_brief_response.txt  0002_title:title_options_prompt.txt  0002_title:title_options_response.txt  0003_background:background_problem_prompt.txt  0003_background:background_problem_response.txt  0004_background:background_context_prompt.txt  0004_background:background_context_response.txt  0005_invention:invention_purpose_prompt.txt  0005_invention:invention_purpose_response.txt  0006_invention:solution_points_prompt.txt  (+7 more)
notebooks/: llm_test.ipynb
(+89 files in other folders)
